--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 <body>
     <nav class="navbar navbar-light " style="font-size: 25px; font-family: sans-serif; background-color: whitesmoke;">
 
-        <img src="https://codingblocks.com/assets/images/cb/cblogo.png" width="124" height="45"
-            class="d-inline-block align-top" alt="">
-        Huffman EnDec Project
+        <div>
+            <span style="text-align: center;">Huffman Encoder Decoder</span>
+        </div>
+
     </nav>
     <div id="container">
         <div class="text_box" style="overflow-y: scroll">
@@ -39,9 +40,9 @@
             <input type="file" id="uploadedFile"/>
         </form>
         <br>
-        <button type="button" class="btn btn-success center_buttons" id="encode">&nbsp;&nbsp;Encode&nbsp;&nbsp;</button>
+        <button type="button" class="btn btn-secondary center_buttons" id="encode">&nbsp;&nbsp;Encode&nbsp;&nbsp;</button>
         <br>
-        <button type="button" class="btn btn-danger center_buttons" id="decode">&nbsp;&nbsp;Decode&nbsp;&nbsp;</button>
+        <button type="button" class="btn btn-info center_buttons" id="decode">&nbsp;&nbsp;Decode&nbsp;&nbsp;</button>
     </div>
 </body>
 
